2024-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-08-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2021-04-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Add repo, package page, issues

2020-12-29  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit' badge

	* .travis.yml: Update to 'bionic', R 4.0, and BSPM

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2017-02-05  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version): Release 0.2.6

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version, Date): Roll minor version

	* tests/minimalTests.R: At request of CRAN, run only if explicitly
	enabled via environment variable; refactored using stopifnot()

	* .travis.yml: Switch to using run.sh for Travis CI

2015-07-03  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Install curl via the marutter PPA as r-cran-curl

2015-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.5

	* R/random.R: Ensure URL <www.random.org> is used instead of
	<random.org> as the latter triggers redirections which can fail

	* NAMESPACE: Explicitly import read.table from utils
	* DESCRIPTION: Import the utils package

2015-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.4
